--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/navigation_movies"
-        android:name="com.ayadiyulianto.themuvidatabest.ui.movies.MoviesFragment"
+        android:name="com.saefulrdevs.mubeego.ui.movies.MoviesFragment"
         android:label="fragment_movies"
         tools:layout="@layout/fragment_movies" />
     <fragment
         android:id="@+id/navigation_tvshows"
-        android:name="com.ayadiyulianto.themuvidatabest.ui.tvshows.TvShowsFragment"
+        android:name="com.saefulrdevs.mubeego.ui.tvshows.TvShowsFragment"
         android:label="fragment_tv_shows"
         tools:layout="@layout/fragment_tv_shows" />
     <activity
         android:id="@+id/menu_search"
-        android:name="com.ayadiyulianto.themuvidatabest.ui.search.SearchActivity"
+        android:name="com.saefulrdevs.mubeego.ui.search.SearchActivity"
         android:label="activity_search"
         tools:layout="@layout/activity_search" />
 </navigation>
