Update navigation error

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,7 +20,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/navigation_favorites"
+            android:id="@+id/navigation_favorite"
             android:icon="@drawable/ic_baseline_favorite_24"
             android:title="@string/title_favorite" />
     </group>
