--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,12 +8,12 @@
     <fragment
         android:id="@+id/navigation_movies"
         android:name="com.saefulrdevs.mubeego.ui.movies.MoviesFragment"
-        android:label="fragment_movies"
+        android:label="Movies"
         tools:layout="@layout/fragment_movies" />
     <fragment
         android:id="@+id/navigation_tvshows"
         android:name="com.saefulrdevs.mubeego.ui.tvshows.TvShowsFragment"
-        android:label="fragment_tv_shows"
+        android:label="Tv Shows"
         tools:layout="@layout/fragment_tv_shows" />
     <activity
         android:id="@+id/menu_search"
