--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,4 +24,11 @@
             android:icon="@drawable/ic_baseline_favorite_24"
             android:title="@string/title_favorite" />
     </group>
+
+    <group android:checkableBehavior="none">
+        <item
+            android:id="@+id/navigation_logout"
+            android:icon="@drawable/ic_logout"
+            android:title="@string/logout" />
+    </group>
 </menu>
