--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Saeful Rohman"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/onPrimary"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/imgProfile"
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="saefulrohmansmantika@gmail.com"
-                android:textColor="#D1D1FF"
+                android:textColor="@color/onPrimary"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/tvProfileName"
                 app:layout_constraintTop_toBottomOf="@id/tvProfileName"
@@ -110,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My Account"
-                android:textColor="#222222"
+                android:textColor="@color/onBackground"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/icAccount"
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Make changes to your account"
-                android:textColor="#888888"
+                android:textColor="@color/onSurfaceVariant"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@id/tvMyAccount"
                 app:layout_constraintTop_toBottomOf="@id/tvMyAccount"
@@ -165,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Subscription"
-                android:textColor="#222222"
+                android:textColor="@color/onBackground"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/icSubscription"
@@ -177,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Upgrade your account to premium"
-                android:textColor="#888888"
+                android:textColor="@color/onSurfaceVariant"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@id/tvSubscription"
                 app:layout_constraintTop_toBottomOf="@id/tvSubscription"
@@ -220,7 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Theme"
-                android:textColor="#222222"
+                android:textColor="@color/onBackground"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/icTheme"
@@ -264,7 +264,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Log out"
-                android:textColor="#222222"
+                android:textColor="@color/onBackground"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/icLogout"
@@ -276,7 +276,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Further secure your account for safety"
-                android:textColor="#888888"
+                android:textColor="@color/onSurfaceVariant"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@id/tvLogout"
                 app:layout_constraintTop_toBottomOf="@id/tvLogout"
@@ -300,7 +300,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="More"
-        android:textColor="#222222"
+        android:textColor="@color/onBackground"
         android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/cardAccountSection"
@@ -344,7 +344,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Help &amp; Support"
-                android:textColor="#222222"
+                android:textColor="@color/onBackground"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/icHelp"
@@ -388,7 +388,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="About App"
-                android:textColor="#222222"
+                android:textColor="@color/onBackground"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/icAbout"
