--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -10,6 +10,7 @@
         style="@style/BaseTextTitle"
         android:fontFamily="@font/inter"
         android:text="@string/sign_in"
+        android:textColor="@color/onBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline1" />
@@ -18,6 +19,7 @@
         android:id="@+id/tv_sign_in_description"
         style="@style/BaseTextDescription"
         android:text="@string/sign_in_description"
+        android:textColor="@color/onSurfaceVariant"
         app:layout_constraintStart_toStartOf="@id/tv_sign_in"
         app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />
 
@@ -25,6 +27,7 @@
         android:id="@+id/tv_email"
         style="@style/BaseTextView"
         android:text="@string/email"
+        android:textColor="@color/onBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_sign_in_description" />
@@ -49,6 +52,7 @@
         android:id="@+id/tv_password"
         style="@style/BaseTextView"
         android:text="@string/password"
+        android:textColor="@color/onBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tf_email" />
@@ -76,6 +80,7 @@
         android:layout_marginHorizontal="@dimen/margin_small"
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/forgot_password"
+        android:textColor="@color/primary"
         app:layout_constraintEnd_toEndOf="@id/tf_password"
         app:layout_constraintTop_toBottomOf="@id/tf_password" />
 
@@ -93,6 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/or"
+        android:textColor="@color/onSurfaceVariant"
         app:layout_constraintEnd_toEndOf="@id/login_button"
         app:layout_constraintStart_toStartOf="@id/login_button"
         app:layout_constraintTop_toBottomOf="@id/login_button" />
@@ -113,6 +119,7 @@
         android:layout_marginTop="@dimen/margin_medium"
         android:layout_marginEnd="@dimen/margin_small"
         android:text="@string/doesnt_have_account"
+        android:textColor="@color/onSurfaceVariant"
         app:layout_constraintEnd_toStartOf="@id/tv_sign_up_click"
         app:layout_constraintStart_toStartOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/google_login" />
