--- a/app/src/main/res/layout/item_vertical_card.xml
+++ b/app/src/main/res/layout/item_vertical_card.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
     android:layout_height="250dp"
-    app:cardCornerRadius="16dp"
     android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginEnd="16dp">
+    app:cardCornerRadius="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,10 +32,9 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/black"
+            android:singleLine="false"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:singleLine="false"
             tools:text="Spiderman: No Way Home" />
 
         <LinearLayout
@@ -50,15 +49,13 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_star_filled_24dp"
-                app:tint="@color/yellow" />
+                android:src="@drawable/ic_star_filled_24dp" />
 
             <TextView
                 android:id="@+id/tv_item_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:textColor="@color/black"
                 android:textSize="13sp"
                 tools:text="9.1/10 IMDb" />
         </LinearLayout>
