--- a/app/src/main/res/layout/activity_main_navigation.xml
+++ b/app/src/main/res/layout/activity_main_navigation.xml
@@ -12,9 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:elevation="4dp"
-        app:titleTextColor="@color/black" />
+        android:elevation="4dp" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
@@ -29,7 +27,6 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         app:menu="@menu/bottom_navigation" />
 
 </LinearLayout>
