--- a/app/src/main/res/layout/item_horizontal_card.xml
+++ b/app/src/main/res/layout/item_horizontal_card.xml
@@ -32,7 +32,6 @@
                 android:id="@+id/tv_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:maxLines="2"
@@ -47,13 +46,11 @@
                 <ImageView
                     android:layout_width="14dp"
                     android:layout_height="14dp"
-                    android:src="@drawable/ic_star_24dp"
-                    app:tint="@color/yellow" />
+                    android:src="@drawable/ic_star_24dp" />
                 <TextView
                     android:id="@+id/tv_item_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:textSize="13sp"
                     android:layout_marginStart="4dp"
                     tools:text="9.1/10 IMDb" />
@@ -63,7 +60,6 @@
                 android:id="@+id/tv_item_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:textSize="13sp"
                 android:layout_marginTop="2dp"
                 tools:text="2021" />
