--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,144 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#AAC7FF</color>
-    <color name="onPrimary">#0A305F</color>
-    <color name="primaryContainer">#284777</color>
-    <color name="onPrimaryContainer">#D6E3FF</color>
-    <color name="secondary">#BEC6DC</color>
-    <color name="onSecondary">#283141</color>
-    <color name="secondaryContainer">#3E4759</color>
-    <color name="onSecondaryContainer">#DAE2F9</color>
-    <color name="tertiary">#89D0ED</color>
-    <color name="onTertiary">#003544</color>
-    <color name="tertiaryContainer">#004D62</color>
-    <color name="onTertiaryContainer">#B9EAFF</color>
-    <color name="error">#FFB4AB</color>
-    <color name="onError">#690005</color>
-    <color name="errorContainer">#93000A</color>
-    <color name="onErrorContainer">#FFDAD6</color>
-    <color name="background">#111318</color>
-    <color name="onBackground">#E2E2E9</color>
-    <color name="surface">#111318</color>
-    <color name="onSurface">#E2E2E9</color>
-    <color name="surfaceVariant">#44474E</color>
-    <color name="onSurfaceVariant">#C4C6D0</color>
-    <color name="outline">#8E9099</color>
-    <color name="outlineVariant">#44474E</color>
-    <color name="scrim">#000000</color>
-    <color name="inverseSurface">#E2E2E9</color>
-    <color name="inverseOnSurface">#2E3036</color>
-    <color name="inversePrimary">#415F91</color>
-    <color name="primaryFixed">#D6E3FF</color>
-    <color name="onPrimaryFixed">#001B3E</color>
-    <color name="primaryFixedDim">#AAC7FF</color>
-    <color name="onPrimaryFixedVariant">#284777</color>
-    <color name="secondaryFixed">#DAE2F9</color>
-    <color name="onSecondaryFixed">#131C2B</color>
-    <color name="secondaryFixedDim">#BEC6DC</color>
-    <color name="onSecondaryFixedVariant">#3E4759</color>
-    <color name="tertiaryFixed">#B9EAFF</color>
-    <color name="onTertiaryFixed">#001F29</color>
-    <color name="tertiaryFixedDim">#89D0ED</color>
-    <color name="onTertiaryFixedVariant">#004D62</color>
-    <color name="surfaceDim">#111318</color>
-    <color name="surfaceBright">#37393E</color>
-    <color name="surfaceContainerLowest">#0C0E13</color>
-    <color name="surfaceContainerLow">#191C20</color>
-    <color name="surfaceContainer">#1D2024</color>
-    <color name="surfaceContainerHigh">#282A2F</color>
-    <color name="surfaceContainerHighest">#33353A</color>
-    <color name="primary_mediumContrast">#B1CBFF</color>
-    <color name="onPrimary_mediumContrast">#001634</color>
-    <color name="primaryContainer_mediumContrast">#7491C7</color>
-    <color name="onPrimaryContainer_mediumContrast">#000000</color>
-    <color name="secondary_mediumContrast">#C2CBE0</color>
-    <color name="onSecondary_mediumContrast">#0D1626</color>
-    <color name="secondaryContainer_mediumContrast">#8891A5</color>
-    <color name="onSecondaryContainer_mediumContrast">#000000</color>
-    <color name="tertiary_mediumContrast">#8DD5F1</color>
-    <color name="onTertiary_mediumContrast">#001922</color>
-    <color name="tertiaryContainer_mediumContrast">#519AB5</color>
-    <color name="onTertiaryContainer_mediumContrast">#000000</color>
-    <color name="error_mediumContrast">#FFBAB1</color>
-    <color name="onError_mediumContrast">#370001</color>
-    <color name="errorContainer_mediumContrast">#FF5449</color>
-    <color name="onErrorContainer_mediumContrast">#000000</color>
-    <color name="background_mediumContrast">#111318</color>
-    <color name="onBackground_mediumContrast">#E2E2E9</color>
-    <color name="surface_mediumContrast">#111318</color>
-    <color name="onSurface_mediumContrast">#FBFAFF</color>
-    <color name="surfaceVariant_mediumContrast">#44474E</color>
-    <color name="onSurfaceVariant_mediumContrast">#C8CAD4</color>
-    <color name="outline_mediumContrast">#A0A3AC</color>
-    <color name="outlineVariant_mediumContrast">#80838C</color>
-    <color name="scrim_mediumContrast">#000000</color>
-    <color name="inverseSurface_mediumContrast">#E2E2E9</color>
-    <color name="inverseOnSurface_mediumContrast">#282A2F</color>
-    <color name="inversePrimary_mediumContrast">#294878</color>
-    <color name="primaryFixed_mediumContrast">#D6E3FF</color>
-    <color name="onPrimaryFixed_mediumContrast">#00112B</color>
-    <color name="primaryFixedDim_mediumContrast">#AAC7FF</color>
-    <color name="onPrimaryFixedVariant_mediumContrast">#133665</color>
-    <color name="secondaryFixed_mediumContrast">#DAE2F9</color>
-    <color name="onSecondaryFixed_mediumContrast">#081121</color>
-    <color name="secondaryFixedDim_mediumContrast">#BEC6DC</color>
-    <color name="onSecondaryFixedVariant_mediumContrast">#2E3647</color>
-    <color name="tertiaryFixed_mediumContrast">#B9EAFF</color>
-    <color name="onTertiaryFixed_mediumContrast">#00141B</color>
-    <color name="tertiaryFixedDim_mediumContrast">#89D0ED</color>
-    <color name="onTertiaryFixedVariant_mediumContrast">#003B4C</color>
-    <color name="surfaceDim_mediumContrast">#111318</color>
-    <color name="surfaceBright_mediumContrast">#37393E</color>
-    <color name="surfaceContainerLowest_mediumContrast">#0C0E13</color>
-    <color name="surfaceContainerLow_mediumContrast">#191C20</color>
-    <color name="surfaceContainer_mediumContrast">#1D2024</color>
-    <color name="surfaceContainerHigh_mediumContrast">#282A2F</color>
-    <color name="surfaceContainerHighest_mediumContrast">#33353A</color>
-    <color name="primary_highContrast">#FBFAFF</color>
-    <color name="onPrimary_highContrast">#000000</color>
-    <color name="primaryContainer_highContrast">#B1CBFF</color>
-    <color name="onPrimaryContainer_highContrast">#000000</color>
-    <color name="secondary_highContrast">#FBFAFF</color>
-    <color name="onSecondary_highContrast">#000000</color>
-    <color name="secondaryContainer_highContrast">#C2CBE0</color>
-    <color name="onSecondaryContainer_highContrast">#000000</color>
-    <color name="tertiary_highContrast">#F6FBFF</color>
-    <color name="onTertiary_highContrast">#000000</color>
-    <color name="tertiaryContainer_highContrast">#8DD5F1</color>
-    <color name="onTertiaryContainer_highContrast">#000000</color>
-    <color name="error_highContrast">#FFF9F9</color>
-    <color name="onError_highContrast">#000000</color>
-    <color name="errorContainer_highContrast">#FFBAB1</color>
-    <color name="onErrorContainer_highContrast">#000000</color>
-    <color name="background_highContrast">#111318</color>
-    <color name="onBackground_highContrast">#E2E2E9</color>
-    <color name="surface_highContrast">#111318</color>
-    <color name="onSurface_highContrast">#FFFFFF</color>
-    <color name="surfaceVariant_highContrast">#44474E</color>
-    <color name="onSurfaceVariant_highContrast">#FBFAFF</color>
-    <color name="outline_highContrast">#C8CAD4</color>
-    <color name="outlineVariant_highContrast">#C8CAD4</color>
-    <color name="scrim_highContrast">#000000</color>
-    <color name="inverseSurface_highContrast">#E2E2E9</color>
-    <color name="inverseOnSurface_highContrast">#000000</color>
-    <color name="inversePrimary_highContrast">#002959</color>
-    <color name="primaryFixed_highContrast">#DDE7FF</color>
-    <color name="onPrimaryFixed_highContrast">#000000</color>
-    <color name="primaryFixedDim_highContrast">#B1CBFF</color>
-    <color name="onPrimaryFixedVariant_highContrast">#001634</color>
-    <color name="secondaryFixed_highContrast">#DEE7FD</color>
-    <color name="onSecondaryFixed_highContrast">#000000</color>
-    <color name="secondaryFixedDim_highContrast">#C2CBE0</color>
-    <color name="onSecondaryFixedVariant_highContrast">#0D1626</color>
-    <color name="tertiaryFixed_highContrast">#C5EDFF</color>
-    <color name="onTertiaryFixed_highContrast">#000000</color>
-    <color name="tertiaryFixedDim_highContrast">#8DD5F1</color>
-    <color name="onTertiaryFixedVariant_highContrast">#001922</color>
-    <color name="surfaceDim_highContrast">#111318</color>
-    <color name="surfaceBright_highContrast">#37393E</color>
-    <color name="surfaceContainerLowest_highContrast">#0C0E13</color>
-    <color name="surfaceContainerLow_highContrast">#191C20</color>
-    <color name="surfaceContainer_highContrast">#1D2024</color>
-    <color name="surfaceContainerHigh_highContrast">#282A2F</color>
-    <color name="surfaceContainerHighest_highContrast">#33353A</color>
+    <color name="md_theme_primary">#8BD0EF</color>
+    <color name="md_theme_onPrimary">#003546</color>
+    <color name="md_theme_primaryContainer">#004D64</color>
+    <color name="md_theme_onPrimaryContainer">#BDE9FF</color>
+    <color name="md_theme_secondary">#B4CAD6</color>
+    <color name="md_theme_onSecondary">#1F333C</color>
+    <color name="md_theme_secondaryContainer">#354A53</color>
+    <color name="md_theme_onSecondaryContainer">#D0E6F2</color>
+    <color name="md_theme_tertiary">#C6C2EA</color>
+    <color name="md_theme_onTertiary">#2E2D4D</color>
+    <color name="md_theme_tertiaryContainer">#454364</color>
+    <color name="md_theme_onTertiaryContainer">#E3DFFF</color>
+    <color name="md_theme_error">#FFB4AB</color>
+    <color name="md_theme_onError">#690005</color>
+    <color name="md_theme_errorContainer">#93000A</color>
+    <color name="md_theme_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_background">#0F1417</color>
+    <color name="md_theme_onBackground">#DFE3E7</color>
+    <color name="md_theme_surface">#0F1417</color>
+    <color name="md_theme_onSurface">#DFE3E7</color>
+    <color name="md_theme_surfaceVariant">#40484C</color>
+    <color name="md_theme_onSurfaceVariant">#C0C8CD</color>
+    <color name="md_theme_outline">#8A9297</color>
+    <color name="md_theme_outlineVariant">#40484C</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#DFE3E7</color>
+    <color name="md_theme_inverseOnSurface">#2C3134</color>
+    <color name="md_theme_inversePrimary">#116682</color>
+    <color name="md_theme_primaryFixed">#BDE9FF</color>
+    <color name="md_theme_onPrimaryFixed">#001F2A</color>
+    <color name="md_theme_primaryFixedDim">#8BD0EF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004D64</color>
+    <color name="md_theme_secondaryFixed">#D0E6F2</color>
+    <color name="md_theme_onSecondaryFixed">#081E27</color>
+    <color name="md_theme_secondaryFixedDim">#B4CAD6</color>
+    <color name="md_theme_onSecondaryFixedVariant">#354A53</color>
+    <color name="md_theme_tertiaryFixed">#E3DFFF</color>
+    <color name="md_theme_onTertiaryFixed">#191836</color>
+    <color name="md_theme_tertiaryFixedDim">#C6C2EA</color>
+    <color name="md_theme_onTertiaryFixedVariant">#454364</color>
+    <color name="md_theme_surfaceDim">#0F1417</color>
+    <color name="md_theme_surfaceBright">#353A3D</color>
+    <color name="md_theme_surfaceContainerLowest">#0A0F11</color>
+    <color name="md_theme_surfaceContainerLow">#171C1F</color>
+    <color name="md_theme_surfaceContainer">#1B2023</color>
+    <color name="md_theme_surfaceContainerHigh">#262B2D</color>
+    <color name="md_theme_surfaceContainerHighest">#303538</color>
+    <color name="md_theme_primary_mediumContrast">#ADE4FF</color>
+    <color name="md_theme_onPrimary_mediumContrast">#002937</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#5399B7</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#000000</color>
+    <color name="md_theme_secondary_mediumContrast">#CAE0EC</color>
+    <color name="md_theme_onSecondary_mediumContrast">#132831</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#7F949F</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#000000</color>
+    <color name="md_theme_tertiary_mediumContrast">#DCD8FF</color>
+    <color name="md_theme_onTertiary_mediumContrast">#242241</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#908DB2</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#000000</color>
+    <color name="md_theme_error_mediumContrast">#FFD2CC</color>
+    <color name="md_theme_onError_mediumContrast">#540003</color>
+    <color name="md_theme_errorContainer_mediumContrast">#FF5449</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#000000</color>
+    <color name="md_theme_background_mediumContrast">#0F1417</color>
+    <color name="md_theme_onBackground_mediumContrast">#DFE3E7</color>
+    <color name="md_theme_surface_mediumContrast">#0F1417</color>
+    <color name="md_theme_onSurface_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#40484C</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#D6DDE3</color>
+    <color name="md_theme_outline_mediumContrast">#ABB3B8</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#8A9196</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#DFE3E7</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#262B2E</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#004E65</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#BDE9FF</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#00131C</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#8BD0EF</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#003B4E</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#D0E6F2</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#00131C</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#B4CAD6</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#243942</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#E3DFFF</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#0F0D2B</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#C6C2EA</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#343353</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#0F1417</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#404548</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#04080A</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#191E21</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#23292B</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#2E3336</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#393E41</color>
+    <color name="md_theme_primary_highContrast">#DEF3FF</color>
+    <color name="md_theme_onPrimary_highContrast">#000000</color>
+    <color name="md_theme_primaryContainer_highContrast">#87CCEB</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#000D14</color>
+    <color name="md_theme_secondary_highContrast">#DEF3FF</color>
+    <color name="md_theme_onSecondary_highContrast">#000000</color>
+    <color name="md_theme_secondaryContainer_highContrast">#B0C6D2</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#000D14</color>
+    <color name="md_theme_tertiary_highContrast">#F2EEFF</color>
+    <color name="md_theme_onTertiary_highContrast">#000000</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#C2BEE6</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#090725</color>
+    <color name="md_theme_error_highContrast">#FFECE9</color>
+    <color name="md_theme_onError_highContrast">#000000</color>
+    <color name="md_theme_errorContainer_highContrast">#FFAEA4</color>
+    <color name="md_theme_onErrorContainer_highContrast">#220001</color>
+    <color name="md_theme_background_highContrast">#0F1417</color>
+    <color name="md_theme_onBackground_highContrast">#DFE3E7</color>
+    <color name="md_theme_surface_highContrast">#0F1417</color>
+    <color name="md_theme_onSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceVariant_highContrast">#40484C</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_outline_highContrast">#E9F1F6</color>
+    <color name="md_theme_outlineVariant_highContrast">#BCC4C9</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#DFE3E7</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#000000</color>
+    <color name="md_theme_inversePrimary_highContrast">#004E65</color>
+    <color name="md_theme_primaryFixed_highContrast">#BDE9FF</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#000000</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#8BD0EF</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#00131C</color>
+    <color name="md_theme_secondaryFixed_highContrast">#D0E6F2</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#000000</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#B4CAD6</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#00131C</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#E3DFFF</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#000000</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#C6C2EA</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#0F0D2B</color>
+    <color name="md_theme_surfaceDim_highContrast">#0F1417</color>
+    <color name="md_theme_surfaceBright_highContrast">#4C5154</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#000000</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#1B2023</color>
+    <color name="md_theme_surfaceContainer_highContrast">#2C3134</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#373C3F</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#42474A</color>
 </resources>
