--- a/app/src/main/res/layout/fragment_tv_series_detail.xml
+++ b/app/src/main/res/layout/fragment_tv_series_detail.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="24dp">
 
@@ -33,6 +33,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="-40dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
             app:cardCornerRadius="24dp">
 
             <LinearLayout
